--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,23 +1,43 @@
 YAML
-name: Backend CI
+name: Backend CI/CD
 
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
-  build-and-test:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Set up Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v1
         with:
-          java-version: '17'
+          java-version: '11'
 
-      - name: Build and test
+      - name: Build with Maven
         run: |
           mvn clean package
+
+      - name: Deploy to production
+        run: |
+          # Comandos para desplegar en producción
+          # Por ejemplo, utilizando scp o rsync
+          scp target/*.jar usuario@servidor:/path/deploy
+
+      - name: Run tests
+        run: |
+          mvn test
+
+      - name: Code analysis
+        run: |
+          # Herramientas de análisis de código como SonarQube
+          mvn sonar:sonar
+
+      - name: Security audit
+        run: |
+          # Herramientas de auditoría de seguridad como OWASP
+          mvn owasp:audit
