--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,14 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>3.1.3</version>
+				<configuration>
+					<altDeploymentRepository>github::default::https://maven.pkg.github.com/joaomaldonado96/ecommerce-backend</altDeploymentRepository>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
