--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,9 @@ spring.security.user.password=admin
 spring.web.cors.allowed-origins=*
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
+springdoc.swagger-ui.path=/mi-documentacion
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+management.endpoints.web.exposure.include=*
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
